# stackshift

./: .gitignore  LICENSE  README.md  __init__.py  cli.py  config.py  display.py  jest.config.js  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
analyzers/: __init__.py  ai_analyzer.py  fixer.py  project_analyzer.py  test_claude.py  validation.py
analyzers/tests/: __init__.py  conftest.py  test_ai_analyzer.py
data/cline/: structure.md
data/developerGPT/: structure.md
data/dravid/: structure.md
data/gitingest/: structure.md
src/: cli.ts
src/app/: page.tsx
src/commands/: migrate.ts
src/transformers/: packageJson.ts  routes.ts  stateManagement.ts  tests.ts  viteConfig.ts
src/types/: index.ts
src/utils/: aiAnalyzer.ts  migrationPlanner.ts  projectAnalyzer.ts  reportGenerator.ts
tests/: analyzer.test.ts  cli.test.js  conftest.py  example.test.js
tests/transformers/: test_package_json.py  test_routes.py  test_vite_config.py
transformers/: __init__.py  component_transformer.py  package_json.py  routes.py  vite_config.py
