[tool.poetry]
name = "stackshift"
version = "0.1.0"
description = "CLI tool to migrate web applications from Vite to Next.js"
authors = ["PM <dev@psychoroid.com>"]
readme = "README.md"
packages = [
    {include = "analyzers"},
    {include = "transformers"},
    {include = "types.py"},
    {include = "cli.py"}
]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
anthropic = "^0.7.0"
pydantic = "^2.5.0"
rich = "^13.7.0"
ast-comments = "^1.0.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.7.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stackshift = "cli:app"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false 